--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: roboto;
+    font-family: sans-serif;
     font-size: 16px;
     line-height: 1.5;
     margin: 0;
@@ -23,4 +23,36 @@ body {
     display: block;
      padding:0.5em;
     text-decoration:none;
+}
+
+.items {
+    width: 80%;
+    margin: auto;
+
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 1em;
+}
+
+.items img {
+    width: 100%;
+    height: auto;
+}
+
+.item {
+    border: 2px solid black;
+    padding: 10px;
+    font-family: sans-serif;
+    font-size: 16px;
+    text-align: center;
+}
+
+.item p {
+    font-weight: bold;
+}
+
+.item button {
+    background-color: bisque;
+    padding: 8px;
+    border-radius: 10px;
 }
